manifests/apps/bookbuyer.yaml
# Create bookbuyer Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookbuyer
  namespace: bookbuyer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookbuyer
      version: v1
  template:
    metadata:
      labels:
        app: bookbuyer
        version: v1
        marblerun/marbletype: bookbuyer
        marblerun/marblecontainer: bookbuyer
    spec:
      serviceAccountName: bookbuyer
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
      containers:
        - name: bookbuyer
          image: ghcr.io/edgelesssys/osm-bookstore-demo/bookbuyer:latest
          imagePullPolicy: IfNotPresent
