manifests/apps/bookthief.yaml
# Create bookthief Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookthief
  namespace: bookthief
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookthief
  template:
    metadata:
      labels:
        app: bookthief
        version: v1
        marblerun/marbletype: bookthief
        marblerun/marblecontainer: bookthief
    spec:
      serviceAccountName: bookthief
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
      containers:
        - name: bookthief
          image: ghcr.io/edgelesssys/osm-bookstore-demo/bookthief:latest
          imagePullPolicy: IfNotPresent
