manifests/apps/bookstore-v2.yaml
# Create bookstore-v2 Service
apiVersion: v1
kind: Service
metadata:
  name: bookstore-v2
  namespace: bookstore
  labels:
    app: bookstore-v2
spec:
  ports:
    - port: 14001
      name: bookstore-port
      appProtocol: tcp
  selector:
    app: bookstore-v2

---
# Create bookstore-v2 Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-v2
  namespace: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-v2
  template:
    metadata:
      labels:
        app: bookstore-v2
        marblerun/marbletype: bookstore
        marblerun/marblecontainer: bookstore
    spec:
      serviceAccountName: bookstore-v2
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
      containers:
        - name: bookstore
          image: ghcr.io/edgelesssys/osm-bookstore-demo/bookstore:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 14001
              name: web
