manifests/apps/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: bookwarehouse # HACK: Bypass TCPRoute requirement, remove me when OSM works!
spec:
  ports:
  - port: 3306
    targetPort: 3306
    name: client
    appProtocol: tcp
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: bookwarehouse # HACK: Bypass TCPRoute requirement, remove me when OSM works!
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
        marblerun/marbletype: edgelessdb
        marblerun/marblecontainer: mysql
    spec:
      serviceAccountName: mysql
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - image: ghcr.io/edgelesssys/edgelessdb-sgx-1gb
        imagePullPolicy: IfNotPresent
        name: mysql
        args: ["-marble"]
        ports:
          - containerPort: 3306
            name: mysql
        volumeMounts:
          - mountPath: /mysql-data
            name: data
        readinessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 15
          periodSeconds: 10
      volumes:
        - name: data
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 250M
---
apiVersion: specs.smi-spec.io/v1alpha4
kind: TCPRoute
metadata:
  name: tcp-route
  namespace: bookwarehouse
spec:
  matches:
    ports:
    - 3306
